<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"

        android:icon="@drawable/ic_add_white_24dp"
        android:title="save"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:title="save"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always"/>

</menu>